--- a/finalProject/src/main/webapp/resources/css/style.css
+++ b/finalProject/src/main/webapp/resources/css/style.css
@@ -1678,7 +1678,7 @@ input[type="text"] {
   padding: 14px; }
 
 #colorlib-footer {
-  padding: 7em 0 0 0; }
+  padding: 0; }
   #colorlib-footer .colorlib-footer-links {
     padding: 0;
     margin: 0; }
