1105 이경희 일반게시판 +추가수정

--- a/finalProject/src/main/webapp/resources/css/mypage.css
+++ b/finalProject/src/main/webapp/resources/css/mypage.css
@@ -127,3 +127,8 @@ select {
 
 #searchText {border:0; height:22px;}
 #titlespan{font-size:20px;}
+
+.subject:hover {
+	cursor:pointer;
+	font-weight:bold;
+}
