경희 게시판 검색, 페이징 처리 완료

--- a/finalProject/src/main/webapp/resources/css/mypage.css
+++ b/finalProject/src/main/webapp/resources/css/mypage.css
@@ -127,6 +127,7 @@ select {
 
 #searchText {border:0; height:22px;}
 #titlespan{font-size:20px;}
+#titlespan:hover{font-weight:bold; cursor:pointer;}
 
 .subject:hover {
 	cursor:pointer;
