--- a/finalProject/src/main/webapp/resources/css/mypage.css
+++ b/finalProject/src/main/webapp/resources/css/mypage.css
@@ -128,7 +128,11 @@ select {
 #searchText {border:0; height:22px;}
 #titlespan{font-size:20px;}
 #titlespan:hover{font-weight:bold; cursor:pointer;}
-
+.row.table { width: 100%; height: 80%; margin:auto; padding: 10px !important; border-bottom: 1px solid whitesmoke;}
+.row.reply { width: 100%; overflow: scroll; margin: auto; height: 20%;padding: 10px !important; background: #faf0eb;}
+.row.reply::-webkit-scrollbar { 
+    display: none; 
+}
 .subject:hover {
 	cursor:pointer;
 	font-weight:bold;
