--- a/finalProject/src/main/webapp/resources/css/mypage.css
+++ b/finalProject/src/main/webapp/resources/css/mypage.css
@@ -105,6 +105,7 @@ ul.my-tabs a:hover, a:active, a:focus {
 .content-table td, .content-table th {border:0;}
 .content-table tbody td {border-bottom:1px solid whitesmoke; height:35px;}
 .row.content {padding:20px; height: 850px; background:white;}
+.row.content2 {padding:20px; height: 850px; background:#efe4e4;}
 tbody tr td {
 	font-size: 12px !important;
 }
@@ -126,7 +127,7 @@ select {
 }
 
 #searchText {border:0; height:22px;}
-#titlespan, #titlespan1{font-size:20px;}
+#titlespan, #titlespan1,#titlespan2{font-size:20px;}
 #titlespan:hover{font-weight:bold; cursor:pointer;}
 .row.table { width: 100%; height: 80%; margin:auto; padding: 10px !important; border-bottom: 1px solid whitesmoke;}
 .row.reply { width: 100%; overflow: scroll; margin: auto; height: 20%;padding: 10px !important; background: #faf0eb;}
