관리자 페이지/마이페이지 수정+문의글답글가져오기해야댐

--- a/finalProject/src/main/webapp/resources/css/header.css
+++ b/finalProject/src/main/webapp/resources/css/header.css
@@ -228,6 +228,6 @@ body {
 	font-size: 13px;
 }
 
-span:after, span:before {
+/* span:after, span:before {
 	background: #D98396 !important;
-}
+} */
