내가 올린 상품/입찰중인내역(은 아직 미완)

--- a/finalProject/src/main/webapp/resources/css/mypage.css
+++ b/finalProject/src/main/webapp/resources/css/mypage.css
@@ -286,7 +286,7 @@ tbody tr td {
 
 .my-tabs li.active{background: white !important; font-weight: bold;}
 
-.form-control.sidebar.colorlib-form-2 {background: #fdf8f4 !important; border: 2px solid whitesmoke !important; height: 45px;}
+.form-control.sidebar.colorlib-form-2 {background: white !important; border: 2px solid whitesmoke !important; height: 45px;}
 
 li.tab-link {
 	opacity : 0.9;
